--- a/modules/swagger-codegen/src/main/resources/typescript-react/models.mustache
+++ b/modules/swagger-codegen/src/main/resources/typescript-react/models.mustache
@@ -1,3 +1,4 @@
+// create by generate-service/plugins/typescript-react/models.mustache
 {{#models}}
 {{#model}}
 export * from './{{{ classFilename }}}';
